test/fail/15-void_parameter_in_model.perk
model Test {
    fun f(a: void): void {
        skip
    }
}